--- a/matcher/dashboard/templates/exports/files/show.html
+++ b/matcher/dashboard/templates/exports/files/show.html
@@ -33,8 +33,11 @@
               </span>
             </dd>
 
-            <dt>Path</dt>
+            <dt>File name</dt>
             <dd>{{ file.path }}</dd>
+
+            <dt>Links count</dt>
+            <dd>{{ file.count_links() }}</dd>
 
             <dt>Session</dt>
             <dd>
