--- a/matcher/templates/nav.html
+++ b/matcher/templates/nav.html
@@ -27,7 +27,7 @@
       {{ menu_item("Platforms", "dashboard.platform_list") }}
       {{ menu_item("Scraps", "dashboard.scrap_list") }}
       {{ menu_item("Objects", "dashboard.object_list") }}
-      {{ menu_item("Exports") }}
+      {{ menu_item("Exports", "dashboard.exports") }}
     </ul>
 
     <ul class="navbar-nav">
