--- a/matcher/dashboard/templates/platforms/list.html
+++ b/matcher/dashboard/templates/platforms/list.html
@@ -35,7 +35,7 @@
               {% for platform in page.items %}
                 <tr>
                   <td>
-                    {{ m.badge(platform.type, class="badge-pill" }}
+                    {{ m.badge(platform.type, class="badge-pill") }}
                   </td>
                   <td>{{ platform.name }}</td>
                   <td>{{ platform.slug }}</td>
