--- a/matcher/dashboard/templates/scraps/_list.html
+++ b/matcher/dashboard/templates/scraps/_list.html
@@ -5,8 +5,8 @@
     <tr>
       <th>Platform</th>
       <th>Status</th>
-      <th>Date</th>
       <th>Links</th>
+      <th>Date</th>
       <th></th>
     </tr>
   </thead>
@@ -20,8 +20,13 @@
           </a>
         </td>
         <td>{{ m.badge(scrap.status, class="badge-pill") }}</td>
+        <td class="td-actions">
+          {{ scrap.links_count }}
+          <a class="btn btn-sm btn-link" href="{{ url_for('.object_list', scrap=scrap.id) }}" rel="tooltip" title="Show scrapped items">
+            <i class="material-icons">chevron_right</i>
+          </a>
+        </td>
         <td>{{ scrap.date | relative_date }}</td>
-        <td>{{ scrap.links_count }}</td>
         <td class="td-actions">
           <a class="btn btn-sm btn-link" href="#" rel="tooltip" title="View scrap">
             <i class="material-icons">arrow_forward</i>
