--- a/matcher/templates/macros.html
+++ b/matcher/templates/macros.html
@@ -54,8 +54,8 @@
   {% endfor %}
 {%- endmacro %}
 
-{% macro render_form(form, action_url='', action='POST', action_text='Submit', class_='', btn_class='btn btn-default') -%}
-  <form method="{{ action }}" action="{{ action_url }}" role="form" class="{{ class_ }}">
+{% macro render_form(form, action_url='', action='POST', action_text='Submit', class_='', btn_class='btn btn-default', multipart=False) -%}
+<form method="{{ action }}" action="{{ action_url }}" role="form" class="{{ class_ }}" {%- if multipart %} enctype=multipart/form-data{% endif %}>
     {{ form.hidden_tag() if form.hidden_tag }}
     {% if caller %}
       {{ caller() }}
