--- a/matcher/dashboard/templates/imports/list.html
+++ b/matcher/dashboard/templates/imports/list.html
@@ -32,7 +32,7 @@
                   <td>{{ file.last_activity | relative_date }}</td>
                   <td>{{ file.filename }}</td>
                   <td class="td-actions">
-                    <a class="btn btn-sm btn-link" href="#" rel="tooltip" title="View file">
+                    <a class="btn btn-sm btn-link" href="{{ url_for('.show_import_file', id=file.id) }}" rel="tooltip" title="View file">
                       <i class="material-icons">arrow_forward</i>
                     </a>
                   </td>
