--- a/matcher/static/style.css
+++ b/matcher/static/style.css
@@ -17,3 +17,11 @@ main {
 .nested-form-field .select2 {
   width: 100%;
 }
+
+.import-field-list table {
+  width: 100%;
+}
+
+.import-field-list table tr td {
+  width: 50%;
+}
