Add Imports to navigation

--- a/matcher/templates/nav.html
+++ b/matcher/templates/nav.html
@@ -28,6 +28,7 @@
       {{ menu_item("Scraps", "dashboard.scrap_list") }}
       {{ menu_item("Objects", "dashboard.object_list") }}
       {{ menu_item("Exports", "dashboard.exports") }}
+      {{ menu_item("Imports", "dashboard.import_file_list") }}
     </ul>
 
     <ul class="navbar-nav">
