Fix links importing & allow refreshing attributes

--- a/matcher/dashboard/templates/home.html
+++ b/matcher/dashboard/templates/home.html
@@ -84,6 +84,15 @@
           </div>
         </div>
       </div>
+
+      <div class="card">
+        <div class="card-header">
+          <h3 class="card-title">Operations</h3>
+        </div>
+        <form class="card-body" method="POST">
+          <button type="submit" name="action" value="refresh">Refresh attributes</button>
+        </form>
+      </div>
     </div>
 
     <div class="col-8">
