Show detected encoding in imports

--- a/matcher/dashboard/templates/imports/show.html
+++ b/matcher/dashboard/templates/imports/show.html
@@ -23,6 +23,9 @@
                 –
               {% endif %}
             </dd>
+
+            <dt>Detected encoding</dt>
+            <dd>{{ file.get_codec() }}</dd>
           </dl>
         </div>
       </div>
