Compute and display line count in imports

--- a/matcher/dashboard/templates/imports/show.html
+++ b/matcher/dashboard/templates/imports/show.html
@@ -24,6 +24,9 @@
               {% endif %}
             </dd>
 
+            <dt>Line count</dt>
+            <dd>{{ file.get_line_count() }}</dd>
+
             <dt>Detected encoding</dt>
             <dd>{{ file.get_codec() }}</dd>
 
