--- a/matcher/dashboard/templates/objects/list.html
+++ b/matcher/dashboard/templates/objects/list.html
@@ -6,7 +6,7 @@
     <div class="col-md-4 col-12 filters">
       <div class="card">
         <div class="card-header card-header-primary">
-          <h4 class="card-title">Filters</h4>
+          <h4 class="card-title">Filters ({{ page.total }} items)</h4>
         </div>
         <div class="card-body">
           {{ m.render_form(filter_form, class_="card-body", action="GET") }}
