Add title for each page and a favicon

--- a/matcher/dashboard/templates/exports/files/new.html
+++ b/matcher/dashboard/templates/exports/files/new.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% import "macros.html" as m %}
 
+{% block title %}New export file • Scraping{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="col-6 offset-3">
