--- a/matcher/dashboard/templates/exports/index.html
+++ b/matcher/dashboard/templates/exports/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Exports • Scraping{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="col-4">
