--- a/matcher/dashboard/templates/imports/list.html
+++ b/matcher/dashboard/templates/imports/list.html
@@ -1,6 +1,8 @@
 {% extends "base-fluid.html" %}
 {% import "macros.html" as m %}
 
+{% block title %}Imports • Page {{ page.page }}/{{ page.pages }} • Scraping{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="col-md-4 col-12 filters">
