--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -7,6 +7,11 @@
   <link href="https://unpkg.com/material-dashboard@2.1.0/assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+  <link rel="shortcut icon" href="/static/favicon.ico">
+  <meta name="theme-color" content="#ab47bc">
   <title>{% block title %}Scraping{% endblock %}</title>
 </head>
 <body>
