--- a/matcher/dashboard/templates/exports/files/show.html
+++ b/matcher/dashboard/templates/exports/files/show.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% import "macros.html" as m %}
 
+{% block title %}Export file #{{ file.id }} • Scraping{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="col-4">
