--- a/matcher/dashboard/templates/home.html
+++ b/matcher/dashboard/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Dashboard • Scraping{% endblock %}
 {% import "macros.html" as m %}
 
 {% block content %}
