--- a/matcher/dashboard/templates/objects/show.html
+++ b/matcher/dashboard/templates/objects/show.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% import "macros.html" as m %}
 
+{% block title %}Object #{{ object.id }} • {{ object.type | badge_display }} • Scraping{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="col-6">
