--- a/matcher/dashboard/templates/platforms/list.html
+++ b/matcher/dashboard/templates/platforms/list.html
@@ -1,6 +1,8 @@
 {% extends "base-fluid.html" %}
 {% import "macros.html" as m %}
 
+{% block title %}Platforms • Page {{ page.page }}/{{ page.pages }} • Scraping{% endblock %}
+
 {% block content %}
   <div class="row">
     <div class="col-12 col-md-4 filters">
