--- a/matcher/dashboard/templates/scraps/_list.html
+++ b/matcher/dashboard/templates/scraps/_list.html
@@ -6,7 +6,7 @@
       <th>Platform</th>
       <th>Status</th>
       <th>Links</th>
-      <th>Date</th>
+      <th>{{ m.render_ordering_link("date", "Date", ordering=ordering, args=query) }}</th>
       <th></th>
     </tr>
   </thead>
